--- a/optimisator/connect/crm/index.html
+++ b/optimisator/connect/crm/index.html
@@ -485,11 +485,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <h2 id="csv-google-drive">Подключение CSV файла через Google Drive</h2>
 <p>Вы можете вручную загрузить CSV файл в оптимизатор с помощью Google Drive.<br />
 Для этого вам необходимо:<br />
-+ Загрузить файл в Google Drive<br />
-+ Предоставить доступ на просмотр файла по ссылке<br />
-+ Запомнить идентификатор файла. Его можно найти в URL после <code>/d/</code> и до следующего подкаталога. Пример:<br />
+<em> Загрузить файл в Google Drive<br />
+</em> Предоставить доступ на просмотр файла по ссылке<br />
+<em> Запомнить идентификатор файла. Его можно найти в URL после <code>/d/</code> и до следующего подкаталога. Пример:<br />
 https://drive.google.com/file/d/<code>1B_CoIDTftzX7T0xVcmExR1l3Y0U</code>/view?usp=sharing<br />
-+ Сформировать URL с использованием получаенного идентификатора по шаблону:<br />
+</em> Сформировать URL с использованием получаенного идентификатора по шаблону:<br />
 https://drive.google.com/uc?export=download&amp;confirm=no_antivirus&amp;id=<code>идентификаторCSVфайла</code>&amp;authuser=0</p>
               
             </div>
