--- a/optimisator/connect/crm/index.html
+++ b/optimisator/connect/crm/index.html
@@ -484,13 +484,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <p>После сохранения настроек начнётся загрузка звонков.</p>
 <h2 id="csv-google-drive">Подключение CSV файла через Google Drive</h2>
 <p>Вы можете вручную загрузить CSV файл в оптимизатор с помощью Google Drive.<br />
-Для этого вам необходимо:<br />
-<em> Загрузить файл в Google Drive<br />
-</em> Предоставить доступ на просмотр файла по ссылке<br />
-<em> Запомнить идентификатор файла. Его можно найти в URL после <code>/d/</code> и до следующего подкаталога. Пример:<br />
-https://drive.google.com/file/d/<code>1B_CoIDTftzX7T0xVcmExR1l3Y0U</code>/view?usp=sharing<br />
-</em> Сформировать URL с использованием получаенного идентификатора по шаблону:<br />
+Для этого вам необходимо:</p>
+<ul>
+<li>Загрузить файл в Google Drive</li>
+<li>Предоставить доступ на просмотр файла по ссылке</li>
+<li>
+<p>Запомнить идентификатор файла. Его можно найти в URL после <code>/d/</code> и до следующего подкаталога. Пример:<br />
+https://drive.google.com/file/d/<code>1B_CoIDTftzX7T0xVcmExR1l3Y0U</code>/view?usp=sharing</p>
+</li>
+<li>
+<p>Сформировать URL с использованием получаенного идентификатора по шаблону:<br />
 https://drive.google.com/uc?export=download&amp;confirm=no_antivirus&amp;id=<code>идентификаторCSVфайла</code>&amp;authuser=0</p>
+</li>
+</ul>
               
             </div>
           </div>
