--- a/tracker/code-tracker/index.html
+++ b/tracker/code-tracker/index.html
@@ -503,7 +503,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <p>После <a href="../first-steps/">создания счетчика</a> перейдите в настройки кода отслеживания.<br />
 <img alt="Настройки кода" src="../code_1.png" /></p>
 <p>Обратите внимание на следующие параметры</p>
-<p><strong><div class="dig">1</div><div class="header">Селектор элемента на странице для размещения кода</div></strong></p>
+<p><strong><div class="dig">1</div><div class="header">Разрядность счетчика</div></strong></p>
 <p>Данная настройка задаёт максимальное количество цифр в трек-коде. Например при разрядность 6 (5+1) id заявки будет находиться в интервале от 1 до 999999.<br />
 Разрядность следует выбирать в соответствии порядком вашей дневной посещаемости.<br />
 Например, при посещаемости 1000 в день рекомендуемая разрядность составит 4 (3+1).</p>
