--- a/generator/start/project/index.html
+++ b/generator/start/project/index.html
@@ -559,7 +559,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <p><strong><div class="dig">11</div><div class="header">Фильтрация по значению</div></strong></p>
 <p>В данном поле можно указывать дополнительное условие, которому должны соответствовать объекты, это поле работает аналогично Правилам.</p>
 <p><strong><div class="dig">12</div><div class="header">Тег/Дата</div></strong></p>
-<p>Хз?</p>
+<p>Данная настройка относится к настройке выше "Фильтрация по значению".<br />
+Тег -  меняет формат поля с текстово-числового на чтение значения указанного тега.<br />
+Дата - влияет на формат поля, в него подтягивается дата, если этот тег ее содержит, в формате фида.</p>
 <p><strong><div class="dig">13</div><div class="header">Путь к дополнительному CSV файлу</div></strong></p>
 <p>Ссылка на файл с дополнительной информацией о товаре, например с маржой, конверсией,ставками и тд. Фид может быть полезен для подсчета индивидуальных ставок для каждого товарного предложения. Фид так же представляет собой таблицу с разделителем точка-запятая, первый столбец состоит из id товарных предложений, должен иметь те же значения что и первый столбец в главном CSV файле или совпадать со списком offerid в главном YML файле.</p>
 <p><strong><div class="dig">14</div><div class="header">Подгружать в систему/Пропускать ошибки</div></strong></p>
